fixed horizontal scrolling issue

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -201,7 +201,7 @@
     align-items: center;
     .header {
         height: 150px;
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: row;
         padding: 30px;
@@ -222,9 +222,11 @@
     }
     .nav {
         height: 75px;
-        width: 100vw;
+        width: 100%;
         background-color: var(--secondary-color);
-        box-shadow: 1px .5px 2px 1px var(--box-shadow-color);
+        border: 2px solid;
+        border-left: 0px;
+        border-right: 0px;
         display: flex;
         align-items: center;
         justify-content: center;
